# empty

./: .bumpversion.cfg  LICENSE  README.md  pyproject.toml  setup.py
empty/: __init__.py  module1.py  utils.py
empty/subpackage/: __init__.py  submodule1.py  submodule2.py
tests/: test_module1.py  test_submodule1.py
