[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "yourpkg"
version = "0.0.2"
description = "Minimal Python package."
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Your Name"}]
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]